--- a/package.json
+++ b/package.json
@@ -41,10 +41,11 @@
   "repository": {
     "url": "https://github.com/EkaanshPC/briklab-stdlib"
   },
-  "version": "1.1.1",
+  "version": "1.1.2",
   "devDependencies": {
     "@types/cssom": "^0.4.3",
     "@types/node": "^25.1.0",
+    "esbuild": "^0.27.2",
     "typescript": "^5.9.3"
   },
   "exports": {
@@ -70,7 +71,6 @@
     }
   },
   "dependencies": {
-    "cssom": "^0.5.0",
-    "esbuild": "^0.27.2"
+    "cssom": "^0.5.0"
   }
 }
