--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "markdown": "github",
   "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && node build.js",
     "test:smoke": "pnpm run build && node ./test-dist.js",
     "prepublishOnly": "pnpm run build"
   },
@@ -40,7 +40,7 @@
   "repository": {
     "url": "https://github.com/EkaanshPC/briklab-stdlib"
   },
-  "version": "1.2.1-test",
+  "version": "1.2.0",
   "devDependencies": {
     "@types/cssom": "^0.4.3",
     "@types/node": "^25.1.0",
